Adding bigger heap and permgen settings for framework tests, needed for new libs and such was failing on permgen out of memory error