@@ -229,6 +229,8 @@ test {
     systemProperty 'moqui.runtime', '../runtime'
     systemProperty 'moqui.conf', 'conf/MoquiDevTestConf.xml'
     systemProperty 'moqui.init.static', 'true'
+    maxHeapSize = "256M"
+    jvmArgs '-XX:MaxPermSize=128m'
 
     testLogging.showStandardStreams = true
 
